--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -16,7 +16,7 @@ baseurl = "https://joshuacook.netlify.com/"
 copyright = "&copy;{year}"
 
 # Enable analytics by entering your Google Analytics tracking ID
-googleAnalytics = ""
+googleAnalytics = "UA-145596899-1"
 
 ############################
 ## Advanced options below ##
