chore: update to Academic v4.8

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -22,12 +22,12 @@ twitter = "joshdoesa"
 
 # Diplay a logo in navigation bar rather than title (optional).
 #   To enable, place an image in `static/img/` and reference its filename below. To disable, set the value to "".
-logo = ""
+#> As of Academic 4.7, just put a file called "assets/images/logo.png" to add a logo.
 
 # Enable source code highlighting? true/false
 # Documentation: https://sourcethemes.com/academic/docs/writing-markdown-latex/#highlighting-options
 highlight = true
-highlight_languages = ["r", "swift"]  # Add support for highlighting additional languages
+highlight_languages = ["r", "swift", "python"]  # Add support for highlighting additional languages
 # highlight_style = "github"  # For supported styles, see https://cdnjs.com/libraries/highlight.js/
 
 # Enable LaTeX math rendering? true/false
