--- a/netlify.toml
+++ b/netlify.toml
@@ -1,18 +1,31 @@
 [build]
-  timeout = "60000"
-  command = "hugo --gc --minify -b $URL"
-  publish = "public"
-
-[build.environment]
-  HUGO_VERSION = "0.68.3"
-  HUGO_ENABLEGITINFO = "true"
+timeout = "60000"
+publish = "public"
+command = "hugo --gc --minify"
 
 [context.production.environment]
-  HUGO_ENV = "production"
+HUGO_VERSION = "0.68.3"
+HUGO_ENV = "production"
+HUGO_ENABLEGITINFO = "true"
+
+[context.split1]
+command = "hugo --gc --minify --enableGitInfo"
+
+[context.split1.environment]
+HUGO_VERSION = "0.68.3"
+HUGO_ENV = "production"
 
 [context.deploy-preview]
-  command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
+command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
+
+[context.deploy-preview.environment]
+HUGO_VERSION = "0.68.3"
 
 [context.branch-deploy]
-  command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
+command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
 
+[context.branch-deploy.environment]
+HUGO_VERSION = "0.68.3"
+
+[context.next.environment]
+HUGO_ENABLEGITINFO = "true"
