--- a/netlify.toml
+++ b/netlify.toml
@@ -1,31 +1,17 @@
 [build]
-timeout = "100000"
-publish = "public"
-command = "hugo --gc --minify"
+  timeout = 9000000
+  command = "hugo --gc --minify -b $URL"
+  publish = "public"
+
+[build.environment]
+  HUGO_VERSION = "0.68.3"
+  HUGO_ENABLEGITINFO = "true"
 
 [context.production.environment]
-HUGO_VERSION = "0.68.3"
-HUGO_ENV = "production"
-HUGO_ENABLEGITINFO = "true"
-
-[context.split1]
-command = "hugo --gc --minify --enableGitInfo"
-
-[context.split1.environment]
-HUGO_VERSION = "0.68.3"
-HUGO_ENV = "production"
+  HUGO_ENV = "production"
 
 [context.deploy-preview]
-command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
-
-[context.deploy-preview.environment]
-HUGO_VERSION = "0.68.3"
+  command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 
 [context.branch-deploy]
-command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
-
-[context.branch-deploy.environment]
-HUGO_VERSION = "0.68.3"
-
-[context.next.environment]
-HUGO_ENABLEGITINFO = "true"
+  command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
