test: adding comments using Commento

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -142,7 +142,7 @@ link_authors = true
   #   0: Disabled
   #   1: Disqus (https://disqus.com)
   #   2: Commento (https://commento.io)
-  engine = 0
+  engine = 2
 
   # Which page types are commentable?
   commentable = {page = true, post = true, docs = true}
@@ -151,6 +151,11 @@ link_authors = true
   [comments.disqus]
     shortname = ""  # Paste the shortname from your Disqus dashboard.
     show_count = true  # Show comment count in page header? (true/false)
+	
+  # Configuration of Commento.
+  [comments.commento]
+    # If self-hosting Commento, enter its URL here (e.g. "https://commento.?.com"), otherwise leave empty.
+    url = "https://cdn.commento.io/js/commento.js"
 
 # Search.
 [search]
