page commenting: removing custom URL

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -155,7 +155,7 @@ link_authors = true
   # Configuration of Commento.
   [comments.commento]
     # If self-hosting Commento, enter its URL here (e.g. "https://commento.?.com"), otherwise leave empty.
-    url = "https://cdn.commento.io/js/commento.js"
+    url = ""
 
 # Search.
 [search]
