--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -142,14 +142,14 @@ link_authors = true
   #   0: Disabled
   #   1: Disqus (https://disqus.com)
   #   2: Commento (https://commento.io)
-  engine = 2
+  engine = 1
 
   # Which page types are commentable?
   commentable = {page = true, post = true, docs = true}
 
   # Configuration of Disqus.
   [comments.disqus]
-    shortname = ""  # Paste the shortname from your Disqus dashboard.
+    shortname = "joshua-cook-personal-website"  # Paste the shortname from your Disqus dashboard.
     show_count = true  # Show comment count in page header? (true/false)
 	
   # Configuration of Commento.
