project: Coffee data recording suite of applications

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,11 @@
         "BFMI",
         "Betancourt",
         "Betancourt's",
+        "Deta",
         "MCMC",
         "Monolithically",
-        "parameterizations"
+        "Streamlit",
+        "parameterizations",
+        "subcommands"
     ]
 }
