--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -26,7 +26,7 @@ googleAnalytics = "UA-145596899-1"
 theme = "academic"
 
 # Get last modified date for content from Git?
-enableGitInfo = false
+enableGitInfo = true
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
