--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,38 +4,38 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "Home"
-  url = "#about"
-  weight = 10
+name = "Home"
+url = "#about"
+weight = 10
 
 [[main]]
-  name = "Publications"
-  url = "#featured"
-  weight = 20
+name = "Publications"
+url = "#featured"
+weight = 20
 
 [[main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 30
+name = "Projects"
+url = "#projects"
+weight = 30
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 40
+name = "Posts"
+url = "#posts"
+weight = 40
 
 [[main]]
-  name = "Accomplishments"
-  url = "#accomplishments"
-  weight = 50
+name = "Accomplishments"
+url = "#accomplishments"
+weight = 50
 
 [[main]]
-  name = "Contact"
-  url = "#contact"
-  weight = 60
+name = "Contact"
+url = "#contact"
+weight = 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 [[main]]
-   name = "CV"
-   url = "files/cv.pdf"
-   weight = 70
+name = "CV"
+url = "https://jhrcook.github.io/cv/"
+weight = 70
