post: update Theano runtime comparison with PyMC v4 data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "Monolithically",
         "organoids",
         "parameterizations",
+        "runtimes",
         "Streamlit",
         "subcommands"
     ],
